--- a/docs/run/runtime-options-overview.mdx
+++ b/docs/run/runtime-options-overview.mdx
@@ -290,7 +290,7 @@ options.execution.shots = 2048
 <span id="pass-options"></span>
 ## Set primitive options
 
-You can set optitons in an options class, when initializing the primitive, when calling the `run()` method, or any combination of those.
+You can set options in an options class, when initializing the primitive, when calling the `run()` method, or any combination of those.
 
 ### Options class
 
