--- a/docs/transpile/index.mdx
+++ b/docs/transpile/index.mdx
@@ -23,7 +23,7 @@ A central component of the Qiskit SDK, the transpiler is designed for modularity
 
 Find more information about the pass manager stages in the [Transpiler stages](transpiler-stages) topic.
 
-### Instruction set architecture
+## Instruction set architecture
 In addition to reducing the depth and complexity of quantum circuits, the transpiler is designed to transform the instructions contained in a given `QuantumCircuit` to obey the Instruction Set Architecture (ISA) of a particular backend.  Circuits obeying the ISA consist only of instructions that are supported by the backend's [`Target`](../api/qiskit/qiskit.transpiler.Target), such as the hardware's available basis gates, measurements, resets, and control flow operations, and comply with the constraints specified by the connectivity of the hardware, that is, the target's [`CouplingMap`](../api/qiskit/qiskit.transpiler.CouplingMap).  When submitting a job to an IBM Quantum&trade; backend, the circuits must adhere to the backend's ISA.
 
 
