remove ticks - they don't render properly

--- a/docs/transpile/custom-backend.ipynb
+++ b/docs/transpile/custom-backend.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "The following example demonstrates this customization by creating a simulated multi-chip backend, where each chip possesses a heavy-hex connectivity.  The example specifies the backend's two-qubit gate set to be [`CZGates`](../api/qiskit/qiskit.circuit.library.CZGate) within each chip and [`CXGates`](../api/qiskit/qiskit.circuit.library.ECRGate) between chips.  First, create your own `BackendV2` and customize its `Target` with single and two-qubit gates according to the previously described constraints.\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"`graphviz`\">\n",
+    "<Admonition type=\"tip\" title=\"graphviz library\">\n",
     "Install the `graphviz` library before trying the following code. It is required to plot a coupling map.\n",
     "</Admonition>"
    ]
