--- a/docs/run/run-jobs-batch.mdx
+++ b/docs/run/run-jobs-batch.mdx
@@ -46,3 +46,8 @@ The following example shows how you can partition a long list of circuits into m
          job = sampler.run(partitioned_circuits)
          jobs.append(job)
  ```
+
+
+<Admonition type="note">
+    If you set `backend=backend` in a v2 primitive it will run the program in job mode, even if it's inside a batch/session context. So, preferred way to use it is `sampler = SamplerV2()` when running in batch mode.
+</Admonition>
