--- a/tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb
+++ b/tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a706ab82-02f1-41ab-9400-1b0d3d887547",
    "metadata": {},
    "source": [
     "# Compare transpiler settings\n",
     "\n",
     "## Background\n",
     "\n",
-    "To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the system (referred to as instruction set architecture (ISA) circuits and observables) before being submitted to the Qiskit Runtime primitives.  One common way to do this is to use the transpiler's `generate_preset_pass_manager` function.  However, you might choose to follow a more manual process. \n",
+    "To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the system (referred to as instruction set architecture (ISA) circuits and observables) before being submitted to the Qiskit Runtime primitives.  One common way to do this is to use the transpiler's `generate_preset_pass_manager` function.  However, you might choose to follow a more manual process.\n",
     "\n",
     "For example, you might want to target a specific subset of qubits on a specific device. This tutorial tests the performance of different transpiler settings by completing the full process of creating, transpiling, and submitting circuits."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "3dd2e666-4d9b-4932-983c-a4468c4a04c9",
    "metadata": {},
    "source": [
     "## Requirements\n",
@@ -27,6 +29,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16849d1b-cb78-4106-abaf-c7b113fb2e94",
    "metadata": {},
    "source": [
     "## Setup"
@@ -35,6 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "4a9547b3-a09a-4563-b027-12fa7350d5e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "1f7d428d-c197-405c-a52c-c9a614cce00c",
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +80,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "853701d3-dcd0-4b40-8c4a-e3bb619b2af4",
    "metadata": {},
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
@@ -85,6 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "20f1ab33-5bca-450f-8ae1-b9b1aae10fe0",
    "metadata": {},
    "outputs": [
     {
@@ -111,6 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "b1913f32-7234-441e-8a60-69cf24073500",
    "metadata": {},
    "outputs": [
     {
@@ -133,6 +141,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41485f5d-38f0-4e50-ae31-2c65abd63544",
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum execution\n",
@@ -145,6 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "237db5b2-d285-4974-8377-b4a902fa2208",
    "metadata": {},
    "outputs": [
     {
@@ -169,6 +179,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5c984f0-5b5a-4c13-8b67-17d8f4f3c491",
    "metadata": {},
    "source": [
     "Since CNOTs usually have a high error rate, the circuit transpiled with `optimization_level=3` should perform much better.\n",
@@ -179,6 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "5907249d-3de4-40c0-bf18-16267e35fd0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "bbccc8cc-3713-487e-a104-e251062c7d02",
    "metadata": {},
    "outputs": [
     {
@@ -226,6 +239,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "121ca6f2-f017-4ea0-b82c-80c9f6823b93",
    "metadata": {},
    "source": [
     "## Step 3: Execute using Qiskit Primitives\n",
@@ -238,6 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "a682fe13-e365-4321-9461-8187e0e7ac17",
    "metadata": {},
    "outputs": [
     {
@@ -269,6 +284,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "006d6e89-db7c-4713-b42c-5b5f743d4b2e",
    "metadata": {},
    "source": [
     "## Step 4: Post-process, return result in classical format\n",
@@ -279,6 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "45828f96-4523-4a8b-9a45-ae03b4769bf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,6 +314,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5182020c-9912-4710-b4c0-83652222507d",
    "metadata": {},
    "source": [
     "You can confirm this by computing the [Hellinger fidelity](https://docs.quantum-computing.ibm.com/api/qiskit/quantum_info) between each set of results and the ideal distribution (higher is better, and 1 is perfect fidelity)."
@@ -305,6 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "719f98a3-c31a-42aa-9590-ba58a2389171",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,6 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b90d5e07-c36a-48a5-823c-96638a4d001a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,6 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "274379ca-c102-47b9-b906-b18fa2a80bcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +360,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   }
  },
  "nbformat": 4,
