--- a/docs/run/error-mitigation-explanation.ipynb
+++ b/docs/run/error-mitigation-explanation.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Error mitigation techniques\n",
+    "# Error mitigation and suppression techniques\n",
     "\n",
     "This page provides high-level explanations of the error suppression and error mitigation techniques available through Qiskit Runtime.\n",
     "\n",
@@ -53,7 +53,7 @@
     "\n",
     "Dynamical decoupling can be enabled by setting `enable` to `True` in the [dynamical decoupling options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions). The `sequence_type` option can be used to pick from several different pulse sequences. The default sequence type is `\"XX\"`.\n",
     "\n",
-    "The following code cell shows how to enable dynamical decoupling for the estimator and choose a dynamical decoupling sequence."
+    "The following code cell shows how to enable dynamical decoupling for the Estimator and choose a dynamical decoupling sequence."
    ]
   },
   {
