--- a/docs/start/setup-channel.mdx
+++ b/docs/start/setup-channel.mdx
@@ -167,7 +167,7 @@ print(result)
     service = QiskitRuntimeService()
   ```
 
-## Set up account using REST APIs
+## Set up account using REST API
 
 Alternatively, you can also access IBM Quantum Systems using REST APIs, enabling you to work with quantum systems from any programming language or framework. 
 
@@ -175,62 +175,62 @@ Alternatively, you can also access IBM Quantum Systems using REST APIs, enabling
 
 2. Obtain a temporary Access token by supplying the API token obtained above. This is especially useful if you would like control over tokens, such as token invalidation. Alternatively, you can work directly with your IBM Quantum Platform API token.
 
-```python
-import requests
+    ```python
+    import requests
 
-with open('token') as file:
-    token=file.read()
+    with open('token') as file:
+      token=file.read()
 
-url = 'https://auth.quantum-computing.ibm.com/api/users/loginWithToken'
-input={'apiToken': token}
-auth_response = requests.post(url, json=input)
-auth_id=auth_response.json()['id']
-```
+    url = 'https://auth.quantum-computing.ibm.com/api/users/loginWithToken'
+    input={'apiToken': token}
+    auth_response = requests.post(url, json=input)
+    auth_id=auth_response.json()['id']
+    ```
 
 3. Let's view your available backends
 
-```python
-url_backends = 'https://api.quantum-computing.ibm.com/runtime/backends'
-headers = {'Content-Type': 'application/json',
-            'x-access-token':auth_id}
+    ```python
+    url_backends = 'https://api.quantum-computing.ibm.com/runtime/backends'
+    headers = {'Content-Type': 'application/json',
+                'x-access-token':auth_id}
 
-backends_response = requests.get(url_backends, headers=headers)
+    backends_response = requests.get(url_backends, headers=headers)
 
-print(backends_response.json()['devices'][:5],"...")
-```
+    print(backends_response.json()['devices'][:5],"...")
+    ```
 
 
-You can then [transpile circuits using REST APIs](/transpile/rest-api-transpilation) and run them using either the [Sampler or the Estimator Primitives](/run/rest-api-primitives).   
+You can then [transpile circuits using REST API](/transpile/rest-api-transpilation) and run them using either the [Sampler or the Estimator Primitives](/run/rest-api-primitives).   
 
 4. After your experiments are complete, you can proceed to invalidate your token followed by testing it's invalidation.
 
-```python
-logout_url = 'https://auth.quantum-computing.ibm.com/api/users/logout'
-headers = {'x-access-token':auth_id}
-logout_response = requests.post(logout_url, headers=headers)
-print("response ok?:",logout_response.ok,logout_response.text)
-```
+    ```python
+    logout_url = 'https://auth.quantum-computing.ibm.com/api/users/logout'
+    headers = {'x-access-token':auth_id}
+    logout_response = requests.post(logout_url, headers=headers)
+    print("response ok?:",logout_response.ok,logout_response.text)
+    ```
 
 This should yield an error (Error 401) once access token is invalidated.
 
-```python
-logout_url = 'https://auth.quantum-computing.ibm.com/api/users/logout'
-headers = {'x-access-token':auth_id}
-logout_response = requests.post(logout_url, headers=headers)
+    ```python
+    logout_url = 'https://auth.quantum-computing.ibm.com/api/users/logout'
+    headers = {'x-access-token':auth_id}
+    logout_response = requests.post(logout_url, headers=headers)
 
-if logout_response.status_code == 200:
-    job_id = logout_response.json().get('id')
-    print("Job created:",logout_response.text)
-elif logout_response.status_code == 401:
-    print("invalid credentials. Access token should be successfully invalidated.")
-else:
-    print(logout_response.text,"\n")
-    print(f"Error: {logout_response.status_code}")
-```
+    if logout_response.status_code == 200:
+        job_id = logout_response.json().get('id')
+        print("Job created:",logout_response.text)
+    elif logout_response.status_code == 401:
+        print("invalid credentials. Access token should be successfully invalidated.")
+    else:
+        print(logout_response.text,"\n")
+        print(f"Error: {logout_response.status_code}")
+    ```
 Output
-```text
-invalid credentials. Access token should be successfully invalidated.
-```
+ ```text
+  invalid credentials. Access token should be successfully invalidated.
+  ```
 
 ## Next steps
 
