--- a/docs/transpile/rest-api-transpilation.mdx
+++ b/docs/transpile/rest-api-transpilation.mdx
@@ -1,11 +1,11 @@
 ---
-title: Transpilation using REST APIs
+title: Transpilation using REST API
 description: How to transpile quantum circuits using REST APIs.
 ---
 
-# Transpilation using REST APIs
+# Transpile using REST API
 
-The circuit provided will need to be mapped to instructions fitting to the hardware basis instructions of the QPU, which is a process known as Transpilation.
+The process of rewriting a given input circuit to match the topology of a specific quantum device, and optimizing the circuit instructions for execution on noisy quantum systems is known as Transpilation. 
 
 * You can either transpile [locally via Qiskit](https://docs.quantum.ibm.com/transpile/defaults-and-configuration-options) before generating the QASM string, or:
 
@@ -15,17 +15,20 @@ The circuit provided will need to be mapped to instructions fitting to the hardw
     [Transpilation is necessary](https://docs.quantum.ibm.com/announcements/product-updates/2024-02-14-qiskit-runtime-primitives-update) prior to submitting a circuit to IBM Quantum backends. 
 </Admonition>
 
+The steps in this topic describe how to transpile a given QASM circuit and obtain results using the Cloud Transpiler REST API. Next steps on how to submit the transpiled quantum circuit to IBM Quantum compute resources are also suggested. 
 
-### Query the Cloud Transpilation service
+## Query the Qiskit Transpiler Service
 
-Query the [Cloud Transpilation service](https://cloud-transpiler.quantum-computing.ibm.com/docs) and provide your QASM string as input. See more details and documentation [here](https://docs.quantum.ibm.com/api/qiskit-transpiler-service-rest). 
+Query the [Cloud Transpiler API](https://cloud-transpiler.quantum-computing.ibm.com/docs) and provide your QASM string as input. See more details and documentation [here](https://docs.quantum.ibm.com/api/qiskit-transpiler-service-rest). 
+
+There are two ways to invoke the Qiskit Transpiler Service using REST API: with regular transpilation and with AI enhanced transpilation. Both ways of invoking the Cloud Transpiler API are shown below. 
 
 <Admonition type="note">
     This experimental service is only available for IBM Quantum Premium Plan users.
 </Admonition>
 
 <Tabs>
-    <TabItem value="Qiskit Transpiler" label="Qiskit Transpiler">
+    <TabItem value="Qiskit Transpiler Service" label="Qiskit Transpiler Service">
         ```python
 backend='ibm_brisbane' #choose your IBM Backend
 
@@ -52,7 +55,7 @@ resp = requests.post(
         ```
     </TabItem>
 
-    <TabItem value="AI Transpiler" label="AI Transpiler">
+    <TabItem value="AI Enhanced Transpiler" label="AI Enhanced Transpiler">
         ```python
 backend='ibm_brisbane' #choose your IBM Backend
 
@@ -85,10 +88,10 @@ resp = requests.post(
 
 
 <Admonition type="note">
-    Since there may be cases where it’s better to forego the use of AI-powered passes, we’ve developed a third option for the ai parameter that gives users the best of both worlds. Set the ai parameter to `ai="auto"`, and this will enable the system to decide automatically whether to apply the standard Qiskit heuristic passes or the new AI-powered passes based on the particulars of your circuit.
+    Since there may be cases where it’s better to forego the use of AI enhanced passes, we’ve developed a third option for the ai parameter that gives users the best of both worlds. Set the `ai` parameter to `ai="auto"`, and this will enable the system to decide automatically whether to apply the standard Qiskit heuristic passes or the new AI-powered passes based on the particulars of your circuit.
 </Admonition>
 
-### Request results based on the `task_id`
+## Request results based on the `task_id`
 
 Request the transpilation service results using the `task_id`
 
@@ -109,7 +112,7 @@ OPENQASM 3.0; include "stdgates.inc"; gate rzx_140040114706704(_gate_p_0) _gate_
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-    - Review detailed [Sampler and Estimator](/run/rest-api-primitives) primitives examples using REST APIs.
+    - Review detailed [Sampler and Estimator](/run/rest-api-primitives) primitives examples using REST API.
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
     - Learn how to transpile locally in the [Transpile](../transpile/) section.
