--- a/docs/start/latest-updates-copy.mdx
+++ b/docs/start/latest-updates-copy.mdx
@@ -5,6 +5,7 @@ description: The latest updates on Qiskit and IBM Quantum, including the latest 
 
 # Latest updates
 
+This page is home to the latest Qiskit package release summaries, documentation updates, blogs, and community events.
 
 ## Latest release summaries
 
