--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -1,86 +1,95 @@
 ---
 title: Latest updates
-description: News on Qiskit and IBM Quantum. Read about new features, deprecations, and more.
+description: The latest updates on Qiskit and IBM Quantum, including the latest package release summaries, news, and events.
 ---
 
 # Latest updates
 
-Get the most important news about Qiskit and IBM Quantum documentation. For
-more detailed news, check out the release notes for each package:
+This page is home to the latest Qiskit package release summaries, documentation updates, blogs, and community events.
 
-* [Qiskit release notes](/api/qiskit/release-notes)
-* [Qiskit IBM Runtime release notes](/api/qiskit-ibm-runtime/release-notes)
-* [Qiskit IBM Provider (deprecated) release notes](/api/qiskit-ibm-provider/release-notes)
+## Latest release summaries
 
-And read about Qiskit on the [IBM Blog](https://www.ibm.com/quantum/blog?topic=qiskit).
+{/* release summaries written by product owners */}
 
-## Sunset of backend.run interface
 
-The [`backend.run`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend#run)
-interface in Qiskit Runtime is now deprecated and will be removed from the
-`qiskit-ibm-runtime` package on the 15th of October. IBM's API will stop
-accepting jobs submitted through this interface at the same time.
+### Qiskit SDK
 
-<Admonition type="caution" title="Action needed">
+Qiskit SDK v1.1.0 has arrived, marking the first minor version release of the Qiskit SDK’s first major version. On the IBM Quantum&trade; blog, we review some of the key highlights — including top new features and improvements, as well as some important deprecations. Read the blog [here](https://www.ibm.com/quantum/blog/qiskit-1-1-release-summary).
 
-To avoid disruption, [migrate your
-projects](/api/migration-guides/qiskit-runtime) to
-V2 primitives before the 15th of October 2024. Jobs submitted through the
-`backend.run` interface after this time will be rejected.
+The updates and improvements include the following:
 
-</ Admonition>
+- Updated `QuantumCircuit` objects that now support typed classical variables
+- Improvements to the preset transpiler pass managers
+- Speedups in transpilation runtime, thanks to our continued work re-writing transpiler passes in Rust
+- A number of new transpiler passes, including `ElidePermutation` and `StarPreRouting`
 
-See the [official announcement](/announcements/product-updates/2024-04-15-backend-run-deprecation).
+Remember, because this a minor release, it will not introduce breaking changes for users moving from Qiskit SDK v1.0. Any deprecations announced with this release refer only to things that will now start throwing deprecation warnings. None of these will be removed until the release of Qiskit v2.0, pursuant to Qiskit’s official [deprecation policy](https://github.com/Qiskit/qiskit/blob/main/DEPRECATION.md#).
 
-## Qiskit 1.3 will drop Python 3.8 support
+For more details on any of the topics covered in the blog, be sure to check [the v1.1 release notes](/api/qiskit/release-notes/1.1).
 
-Qiskit 1.3.0 will be the first release after Python 3.8 reaches its end-of-life
-stage and stops being supported. Qiskit version 1.3.0 and later may use
-features only available in Python 3.9. To use these later versions of Qiskit,
-you'll need to upgrade the version of Python you're using to 3.9 or greater.
+{/* use url format /api/qiskit/release-notes/X.X to link to the specific X.X version of the release notes */}
 
-See this announcement in the [release notes](/api/qiskit/release-notes/1.1#deprecation-notes)
+### Qiskit Runtime IBM Client
 
-##  Qiskit adds typed classical variables to quantum circuits
+{/* use url format /api/qiskit-ibm-runtime/release-notes#0XYZ to link to the specific 0.XY.Z version of the release notes */}
 
-Qiskit [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit) objects
-can now contain typed classical variables for real-time classical computation.
-Use this feature to do classical calculations based on results of qubit
-measurements.
+### Qiskit Transpiler Service Client
 
-```python
-from qiskit.circuit import QuantumCircuit, ClassicalRegister, QuantumRegister
-from qiskit.circuit.classical import expr, types
- 
-qr = QuantumRegister(2, "q")
-cr = ClassicalRegister(2, "c")
-qc = QuantumCircuit(qr, cr)
-# Add two input variables to the circuit with different types.
-a = qc.add_input("a", types.Bool())
-mask = qc.add_input("mask", types.Uint(2))
- 
-# Test whether the input variable was true at runtime.
-with qc.if_test(a) as else_:
-    qc.x(0)
-with else_:
-    qc.h(0)
- 
-qc.cx(0, 1)
-qc.measure(qr, cr)
- 
-# Add a typed variable manually, initialized to the same value as the classical register.
-b = qc.add_var("b", expr.lift(cr))
- 
-qc.reset([0, 1])
-qc.h(0)
-qc.cx(0, 1)
-qc.measure(qr, cr)
- 
-# Store some calculated value into the `b` variable.
-qc.store(b, expr.bit_and(b, cr))
-# Test whether we had equality, up to a mask.
-with qc.if_test(expr.equal(expr.bit_and(b, mask), mask)):
-    qc.x(0)
-```
+We’re pleased to share that the beta release of the Qiskit Transpiler Service is now available to all IBM Quantum&trade; Premium Plan users.
 
-Read about this feature and more in the [Qiskit release notes](/api/qiskit/release-notes/1.1#circuits-features).
+The Qiskit Transpiler Service leverages the resources of IBM Cloud&reg; to provide users with the latest transpilation capabilities from the Qiskit SDK. It offers a Python library that helps users seamlessly integrate the service into their current Qiskit patterns and workflows. Perhaps most importantly, the service invites users to experiment with new and improved AI-powered transpiler passes — cutting-edge tools that might be faster and produce better results than traditional transpilation methods.
+
+On the IBM Quantum blog, we take a deep dive into the new beta release with a special focus on the new AI-powered passes. The blog includes detailed explanations showing how to use the Qiskit Transpiler Service for both full circuit transpilation and standalone AI-powered passes, with code examples for each. [Take a look.](https://www.ibm.com/quantum/blog/ai-transpiler-passes)
+
+{/* no other release notes available yet */}
+
+## Recent Quantum blogs {/* or just "Recent Quantum blog"? */}
+
+{/* Point to just the latest blog, copying over the Quantum news announcement post advertising it??? - or more than just the latest? */}
+
+In a recent post on the IBM Quantum&trade; blog, we introduce three new and improved execution modes that make running utility-scale workloads more reliable, more predictable, and more efficient than ever before.
+
+Execution modes are the rules and procedures that govern how a user’s quantum circuits run on classical and quantum resources. When IBM put the first quantum computer in the cloud in 2016, users could only execute circuits as individual jobs. Since then, we’ve been working to see how execution modes can optimize the user experience even further.
+
+After previewing them at the IBM Quantum Summit, we're thrilled to share more details on three execution modes that give users more flexibility in choosing how their circuits should be grouped together or divided up for optimal execution. These include **job mode** for running standalone jobs, **batch mode** for running non-iterative multi-job workloads, and **session mode** for running iterative workloads as a single experiment.
+
+For more details on the new and improved execution modes, including example code that demonstrates batch mode and session mode, see [the full blog post](https://www.ibm.com/quantum/blog/execution-modes).
+
+{/* End the entry with: */}
+Browse all blogs at the [Quantum Research blog page](https://www.ibm.com/quantum/blog).
+
+## What's new in the documentation
+
+{/* Copy over the latest "What's new in the docs" announcement */}
+
+
+IBM Quantum documentation recently added a number of user-facing improvements, including content updates and new features. Many of these changes are a result of specific user requests! Check out the highlights below, and visit our documentation [here](https://docs.quantum.ibm.com/).
+
+### Updated content
+
+- A new guide to [Execution mode changes](/api/migration-guides/sessions), as well as updated information across the platform on the new and improved [execution modes](/run/execution-modes)
+- [Hello world](/start/hello-world) and [Install](/start/install) pages have been updated with brand new content from the [Coding with Qiskit](https://www.youtube.com/playlist?list=PLOFEBzvs-VvrgHZt3exM_NNiNKtZlHvZi) YouTube series
+- All content and examples have been updated to use V2 primitives and Qiskit SDK v1.0
+- Information on [Hardware considerations](/verify#hardware-considerations) for simulating in local testing mode have been added
+- The [Fixed and dynamic repetition rate execution](/run/circuit-execution) page has been updated with a new example for [specifying `rep_delay` for a primitive job](/run/circuit-execution#specify-rep_delay-for-a-primitive-job)
+
+### User experience improvements
+
+- Two new ways to submit feedback! Click the "Report a bug or request content on [GitHub](https://github.com/Qiskit/documentation/issues/new/choose)" link on every page - or use the new anonymous [feedback form](https://ibmxm.iad1.qualtrics.com/jfe/form/SV_7Uq9FCMjZPyTsFM?Q_PopulateResponse={%22QID20%22:%223%22}) to share your ideas, experiences, and suggestions
+
+Improvements to API reference documentation readability:
+- Module pages make better use of headers to express the information hierarchy 
+- The Qiskit SDK table of contents was reorganized into logical groups
+- API docs now more clearly display modifiers like `class`, `static`, and `abstract` in front of code objects
+
+*A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
+
+## Qiskit global community events
+
+Join, participate, contribute! See what events are coming up on the [Qiskit community events calendar](https://www.ibm.com/quantum/community#events).
+
+## See all product updates
+
+<Admonition type="note">
+Visit the [Product announcements](/announcements/product-updates) to browse all product updates and news.
+</Admonition>
