--- a/docs/transpile/rest-api-transpilation.mdx
+++ b/docs/transpile/rest-api-transpilation.mdx
@@ -55,7 +55,7 @@ resp = requests.post(
         ```
     </TabItem>
 
-    <TabItem value="AI Enhanced Transpiler" label="AI Enhanced Transpiler">
+    <TabItem value="Qiskit Transpiler Service with AI" label="Qiskit Transpiler Service with AI">
         ```python
 backend='ibm_brisbane' #choose your IBM Backend
 
