--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -31,6 +31,40 @@ For more details on any of the topics covered in the blog, be sure to check [the
 
 ### Qiskit Runtime IBM Client
 
+**New features**
+
+*   Related to the execution modes, Sampler and Estimator now include a `mode` argument. The `mode` parameter can be a Backend, Session, Batch, or None. As a result, the backend name has been deprecated, and will no longer be supported as a valid execution mode.
+
+*   The ZneOptions.amplifier option was added, which can be one of these strings:
+
+    *   `"gate_folding"` (default) uses 2-qubit gate folding to amplify noise. If the noise factor requires amplifying only a subset of the gates, then these gates are chosen randomly.
+    *   `"gate_folding_front"` uses 2-qubit gate folding to amplify noise. If the noise factor requires amplifying only a subset of the gates, then these gates are selected from the front of the topologically ordered DAG circuit.
+    *   `"gate_folding_back"` uses 2-qubit gate folding to amplify noise. If the noise factor requires amplifying only a subset of the gates, then these gates are selected from the back of the topologically ordered DAG circuit.
+
+*   When saving an account, there is a new parameter, `private_endpoint` that if set to `True`, allows users to connect to a private IBM Cloud API. This parameter can also be used when the service is initialized, for example: `QiskitRuntimeService(private_endpoint = True)`.
+
+*   New opt-in feature to support fractional gates is added to [`IBMBackend`](qiskit_ibm_runtime.IBMBackend "qiskit_ibm_runtime.IBMBackend"). IBM backends currently support dynamic circuits and fractional gates exclusively and the two features cannot be used in the same primitive job. In addition, some error mitigation protocols you can use with the estimator primitive, such as PEC or PEA, may not support gate twirling with the fractional gates. Since Qiskit Target model doesn’t represent such constraint, we adopted the opt-in approach, where your backend target includes only fractional gates (control flow instructions) when the backend is (not) opted. This feature is controlled when you retrieve the target backend from the [`QiskitRuntimeService`](qiskit_ibm_runtime.QiskitRuntimeService "qiskit_ibm_runtime.QiskitRuntimeService").
+
+    ```python
+    from qiskit_ibm_runtime import QiskitRuntimeService
+
+    backend = QiskitRuntimeService(channel="ibm_quantum").backends(
+        "name_of_your_backend",
+        use_fractional_gates=True,
+    )[0]
+    ```
+
+    When the fractional feature is enabled, transpiled circuits may have shorter depth compared with the conventional IBM basis gates, e.g. \[sx, rz, ecr].
+
+    When you use control flow instructions, e.g. `if_else`, in your circuit, you must disable the fractional gate feature to get executable ISA circuits. The choice of the instruction set is now responsibility of users.
+
+    Note that this pattern may be modified or removed without deprecation when the IBM backends is updated in future development.
+
+*   You can now use the experimental option in [`qiskit_ibm_runtime.options.EstimatorOptions`](qiskit_ibm_runtime.options.EstimatorOptions "qiskit_ibm_runtime.options.EstimatorOptions") to enable Probabilistic Error Amplification (PEA) error mitigation method for your estimator jobs.
+
+*   Qiskit version `1.1` is now supported and required.
+
+For deprecation notes, upgrade notes, and bug fixes, see the [0.24.0 release notes](/api/qiskit-ibm-runtime/release-notes#0240-2024-06-10).
 {/* use url format /api/qiskit-ibm-runtime/release-notes#0XYZ to link to the specific 0.XY.Z version of the release notes */}
 
 ### Qiskit Transpiler Service Client
