--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -43,7 +43,7 @@ For more details on any of the topics covered in the blog, be sure to check [the
 
 *   When saving an account, there is a new parameter, `private_endpoint` that if set to `True`, allows users to connect to a private IBM Cloud API. This parameter can also be used when the service is initialized, for example: `QiskitRuntimeService(private_endpoint = True)`.
 
-*   New opt-in feature to support fractional gates is added to [`IBMBackend`](qiskit_ibm_runtime.IBMBackend "qiskit_ibm_runtime.IBMBackend"). IBM backends currently support dynamic circuits and fractional gates exclusively and the two features cannot be used in the same primitive job. In addition, some error mitigation protocols you can use with the estimator primitive, such as PEC or PEA, may not support gate twirling with the fractional gates. Since Qiskit Target model doesn’t represent such constraint, we adopted the opt-in approach, where your backend target includes only fractional gates (control flow instructions) when the backend is (not) opted. This feature is controlled when you retrieve the target backend from the [`QiskitRuntimeService`](qiskit_ibm_runtime.QiskitRuntimeService "qiskit_ibm_runtime.QiskitRuntimeService").
+*   New opt-in feature to support fractional gates is added to [`IBMBackend`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend#run). IBM backends currently support dynamic circuits and fractional gates exclusively and the two features cannot be used in the same primitive job. In addition, some error mitigation protocols you can use with the estimator primitive, such as PEC or PEA, may not support gate twirling with the fractional gates. Since Qiskit Target model doesn’t represent such constraint, we adopted the opt-in approach, where your backend target includes only fractional gates (control flow instructions) when the backend is (not) opted. This feature is controlled when you retrieve the target backend from the [`QiskitRuntimeService`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService).
 
     ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
@@ -60,7 +60,7 @@ For more details on any of the topics covered in the blog, be sure to check [the
 
     Note that this pattern may be modified or removed without deprecation when the IBM backends is updated in future development.
 
-*   You can now use the experimental option in [`qiskit_ibm_runtime.options.EstimatorOptions`](qiskit_ibm_runtime.options.EstimatorOptions "qiskit_ibm_runtime.options.EstimatorOptions") to enable Probabilistic Error Amplification (PEA) error mitigation method for your estimator jobs.
+*   You can now use the experimental option in [`qiskit_ibm_runtime.options.EstimatorOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) to enable Probabilistic Error Amplification (PEA) error mitigation method for your estimator jobs.
 
 *   Qiskit version `1.1` is now supported and required.
 
