use external link

--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -125,5 +125,5 @@ Join, participate, contribute! See what events are coming up on the [Qiskit comm
 ## See all product updates
 
 <Admonition type="note">
-Visit the [Product announcements](/announcements/product-updates) to browse all product updates and news.
+Visit the [Product announcements](https://docs.quantum.ibm.com/announcements/product-updates) to browse all product updates and news.
 </Admonition>
