--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -31,40 +31,31 @@ For more details on any of the topics covered in the blog, be sure to check [the
 
 ### Qiskit Runtime IBM Client
 
-**New features for the v0.24.0 release**
+**Highlights from the 0.24.0 (2024-06-10) version release**
 
-*   Related to the execution modes, Sampler and Estimator now include a `mode` argument. The `mode` parameter can be a Backend, Session, Batch, or None. As a result, the backend name has been deprecated, and will no longer be supported as a valid execution mode.
+#### Deprecation notes
 
-*   The ZneOptions.amplifier option was added, which can be one of these strings:
+- The `backend` and `session` parameters in `SamplerV2` and `EstimatorV2` are deprecated. You can use the new `mode` parameter instead.
+- [`qiskit_ibm_runtime.QiskitRuntimeService.get_backend()`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#get_backend) is deprecated. You can use [`qiskit_ibm_runtime.QiskitRuntimeService.backend()`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backend) instead.
+- The V1 fake backends, `FakeBackend`, and FakeProvider are deprecated in favor of the V2 fake backends and [`FakeProviderForBackendV2`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.fake_provider.FakeProviderForBackendV2).
 
-    *   `"gate_folding"` (default) uses 2-qubit gate folding to amplify noise. If the noise factor requires amplifying only a subset of the gates, then these gates are chosen randomly.
-    *   `"gate_folding_front"` uses 2-qubit gate folding to amplify noise. If the noise factor requires amplifying only a subset of the gates, then these gates are selected from the front of the topologically ordered DAG circuit.
-    *   `"gate_folding_back"` uses 2-qubit gate folding to amplify noise. If the noise factor requires amplifying only a subset of the gates, then these gates are selected from the back of the topologically ordered DAG circuit.
+#### New features
 
-*   When saving an account, there is a new parameter, `private_endpoint` that if set to `True`, allows users to connect to a private IBM Cloud API. This parameter can also be used when the service is initialized, for example: `QiskitRuntimeService(private_endpoint = True)`.
+- The ZneOptions.amplifier option was added, which can be one of: "gate_folding" (default), "gate_folding_front", and "gate_folding_back". See the API reference for more details.
+- You can now use the experimental option in [`qiskit_ibm_runtime.options.EstimatorOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) to enable the Probabilistic Error Amplification (PEA) error mitigation method.
 
-*   New opt-in feature to support fractional gates is added to [`IBMBackend`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend#run). IBM backends currently support dynamic circuits and fractional gates exclusively and the two features cannot be used in the same primitive job. In addition, some error mitigation protocols you can use with the estimator primitive, such as PEC or PEA, may not support gate twirling with the fractional gates. Since Qiskit Target model doesn’t represent such constraint, we adopted the opt-in approach, where your backend target includes only fractional gates (control flow instructions) when the backend is (not) opted. This feature is controlled when you retrieve the target backend from the [`QiskitRuntimeService`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService).
+#### Upgrade Notes
 
-    ```python
-    from qiskit_ibm_runtime import QiskitRuntimeService
+- Qiskit version 1.1 is now supported and required.
 
-    backend = QiskitRuntimeService(channel="ibm_quantum").backends(
-        "name_of_your_backend",
-        use_fractional_gates=True,
-    )[0]
-    ```
+#### Bug Fixes
 
-    When the fractional feature is enabled, transpiled circuits may have shorter depth compared with the conventional IBM basis gates, e.g. \[sx, rz, ecr].
+- Fixed an issue where retrieved jobs would only return RuntimeJob instances, even if the job was run with a V2 primitive. Now, V2 primitive jobs will be returned correctly as `RuntimeJobV2` instances.
+- Fixed the combination of `insert_multiple_cycles` and `coupling_map` options in [`PadDynamicalDecoupling`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.transpiler.passes.scheduling.PadDynamicalDecoupling). This combination allows to select staggered dynamical decoupling with multiple sequence cycles in each delay that crosses the threshold set by sequence_min_length_ratios.
+- Fixed measurement twirling docstring which incorrectly indicated it’s enabled by default for Sampler.
+- Fixed issues related to target generation and calibration data.
 
-    When you use control flow instructions, e.g. `if_else`, in your circuit, you must disable the fractional gate feature to get executable ISA circuits. The choice of the instruction set is now responsibility of users.
-
-    Note that this pattern may be modified or removed without deprecation when the IBM backends is updated in future development.
-
-*   You can now use the experimental option in [`qiskit_ibm_runtime.options.EstimatorOptions`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) to enable Probabilistic Error Amplification (PEA) error mitigation method for your estimator jobs.
-
-*   Qiskit version `1.1` is now supported and required.
-
-For deprecation notes, upgrade notes, and bug fixes, see the [0.24.0 release notes](/api/qiskit-ibm-runtime/release-notes#0240-2024-06-10).
+See the full [0.24.0 release notes](/api/qiskit-ibm-runtime/release-notes#0240-2024-06-10).
 {/* use url format /api/qiskit-ibm-runtime/release-notes#0XYZ to link to the specific 0.XY.Z version of the release notes */}
 
 ### Qiskit Transpiler Service Client
@@ -81,11 +72,11 @@ On the IBM Quantum blog, we take a deep dive into the new beta release with a sp
 
 ### 28 March 2024
 
-Qiskit Runtime primitives now support QASM 3 as the input format for circuits and standard JSON output format. See [Qiskit IBM Runtime REST API](https://docs.quantum.ibm.com/api/runtime) for examples.
+Qiskit Runtime primitives now support QASM 3 as the input format for circuits and standard JSON output format. See [Qiskit IBM Runtime REST API](/api/runtime) for examples.
 
 ### 3 June 2024
 
-Probabilistic error amplification (PEA) error mitigation method is now available as an experimental option for Estimator V2. See the [`EstimatorOptions` API reference](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) for more details.
+Probabilistic error amplification (PEA) error mitigation method is now available as an experimental option for Estimator V2. See the [`EstimatorOptions` API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) for more details.
 
 ### 18 June 2024
 
