--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -83,7 +83,7 @@ Probabilistic error amplification (PEA) error mitigation method is now available
 The `optimization_level` option is deprecated for Estimator V2 and will be removed no sooner than three months from now.
 
 
-## Recent Quantum blogs {/* or just "Recent Quantum blog"? */}
+## Recent Quantum blog
 
 {/* Point to just the latest blog, copying over the Quantum news announcement post advertising it??? - or more than just the latest? */}
 
