--- a/docs/transpile/representing_quantum_computers.ipynb
+++ b/docs/transpile/representing_quantum_computers.ipynb
@@ -326,7 +326,7 @@
    "source": [
     "The default single-qubit gates on _ibm_sherbrooke_ are `rz`, `x`, and `sx`, and the default two-qubit gate is `ecr` (echoed cross-resonance). CX gates are constructed from `ecr` gates, so on some systems `ecr` is specified as the two-qubit basis gate, while on others `cx` is the default. The `ecr` gate is the _entangling_ part of the `cx` gate. To use a gate that is not in the basis gate set, follow instructions in the Qiskit SDK API documentation for custom gates using [pulse gates](/api/qiskit/qiskit.transpiler.passes.PulseGates#pulsegates). In addition to the control gates, there are also `delay` and `measurement` instructions.\n",
     "\n",
-    "<Admonition>\n",
+    "<Admonition type=\"note\">\n",
     "    Systems have default basis gates, but you can choose whatever gates you want, as long as you provide the instruction or add pulse gates (see [Create transpiler passes.](custom-transpiler-pass)) The default basis gates are those that calibrations have been done for on the system, so no further instruction/pulse gates need to be provided. For example, on some systems `cx` is the default two-qubit gate and `ecr` on others. See the [Native gates and operations](../run/native-gates) topic for more details.\n",
     "</Admonition>"
    ]
@@ -418,13 +418,13 @@
    "outputs": [],
    "source": [
     "from qiskit.transpiler import Target\n",
-    "from qiskit.circuit.controlflow import IfElseOp\n",
+    "from qiskit.circuit.controlflow import IfElseOp, SwitchCaseOp, ForLoopOp\n",
     "\n",
     "err_targ = Target.from_configuration(\n",
     "    basis_gates=basis_gates,\n",
     "    coupling_map=coupling_map,\n",
     "    num_qubits=target.num_qubits,\n",
-    "    custom_name_mapping={\"if_else\": IfElseOp},\n",
+    "    custom_name_mapping={ \"if_else\": IfElseOp, \"switch_case\": SwitchCaseOp, \"for_loop\": ForLoopOp },\n",
     ")\n",
     "\n",
     "for i, (op, qargs) in enumerate(target.instructions):\n",
