--- a/docs/run/error-mitigation-explanation.ipynb
+++ b/docs/run/error-mitigation-explanation.ipynb
@@ -68,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "estimator = Estimator(backend=backend)\n",
+    "estimator = Estimator(mode=backend)\n",
     "estimator.options.dynamical_decoupling.enable = True\n",
     "estimator.options.dynamical_decoupling.sequence_type = \"XpXm\""
    ]
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = Estimator(backend=backend)\n",
+    "estimator = Estimator(mode=backend)\n",
     "estimator.options.twirling.enable_gates = True\n",
     "estimator.options.twirling.num_randomizations = 32\n",
     "estimator.options.twirling.shots_per_randomization = 100"
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = Estimator(backend=backend)\n",
+    "estimator = Estimator(mode=backend)\n",
     "estimator.options.resilience.measure_mitigation = True\n",
     "estimator.options.resilience.measure_noise_learning.num_randomizations = 32\n",
     "estimator.options.resilience.measure_noise_learning.shots_per_randomization = 100"
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = Estimator(backend=backend)\n",
+    "estimator = Estimator(mode=backend)\n",
     "estimator.options.resilience.zne_mitigation = True\n",
     "estimator.options.resilience.zne.noise_factors = (1, 3, 5)\n",
     "estimator.options.resilience.zne.extrapolator = \"exponential\""
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = Estimator(backend=backend)\n",
+    "estimator = Estimator(mode=backend)\n",
     "estimator.options.resilience.pec_mitigation = True\n",
     "estimator.options.resilience.pec.max_overhead = 100"
    ]
