--- a/tutorials/chsh-inequality/chsh-inequality.ipynb
+++ b/tutorials/chsh-inequality/chsh-inequality.ipynb
@@ -358,7 +358,7 @@
     "# To run on a local simulator:\n",
     "# Use the StatevectorEstimator from qiskit.primitives instead.\n",
     "\n",
-    "estimator = Estimator(backend=backend)\n",
+    "estimator = Estimator(mode=backend)\n",
     "\n",
     "pub = (\n",
     "    chsh_isa_circuit,  # ISA circuit\n",
