--- a/tutorials/grovers-algorithm/grovers.ipynb
+++ b/tutorials/grovers-algorithm/grovers.ipynb
@@ -329,7 +329,7 @@
    "source": [
     "# To run on local simulator:\n",
     "#   1. Use the SatetvectorSampler from qiskit.primitives instead\n",
-    "sampler = Sampler(backend=backend)\n",
+    "sampler = Sampler(mode=backend)\n",
     "sampler.options.default_shots = 10_000\n",
     "result = sampler.run([circuit_isa]).result()\n",
     "dist = result[0].data.meas.get_counts()"
