--- a/tutorials/variational-quantum-eigensolver/vqe.ipynb
+++ b/tutorials/variational-quantum-eigensolver/vqe.ipynb
@@ -550,7 +550,7 @@
    ],
    "source": [
     "with Session(backend=backend) as session:\n",
-    "    estimator = Estimator(session=session)\n",
+    "    estimator = Estimator(mode=session)\n",
     "    estimator.options.default_shots = 10000\n",
     "\n",
     "    res = minimize(\n",
