--- a/docs/run/quantum-serverless.mdx
+++ b/docs/run/quantum-serverless.mdx
@@ -166,7 +166,7 @@ target_circuit = selector.optimized_circuit
 # target_circuit = pm.run(abstract_circuit)
 
 # Step 3: Execute the target circuit
-sampler = Sampler(backend=backend, options={"default_shots": 1024})
+sampler = Sampler(mode=backend, options={"default_shots": 1024})
 job = sampler.run([target_circuit])
 result = job.result()
     
