Apply suggestions from review
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/transpile/transpiler-stages.ipynb
+++ b/docs/transpile/transpiler-stages.ipynb
@@ -421,7 +421,7 @@
     "ghz.cx(0, range(1, 5))\n",
     "\n",
     "\n",
-    "# Use fake pulse enabled backend and collect timing information\n",
+    "# Use fake pulse-enabled backend\n",
     "backend = FakeWashingtonV2()\n",
     "\n",
     "# Run with optimization level 3 and 'asap' scheduling pass\n",
