Minor changes based on comments

--- a/docs/run/rest-api-execution-modes.mdx
+++ b/docs/run/rest-api-execution-modes.mdx
@@ -75,7 +75,7 @@ Session closure response ok?: True
 
 ## Batch mode with REST API
 
-Alternatively, you can also submit a batch job by specifying the `mode` in the request payload.
+Alternatively, you can also submit a batch job by specifying the `mode` in the request payload. Batch mode can help shorten processing time if all jobs can be provided at the outset. More details about batch mode can be found in the [documentation](https://docs.quantum.ibm.com/run/run-jobs-batch).
 
 ```python
 import json
