--- a/docs/run/rest-api-primitives.mdx
+++ b/docs/run/rest-api-primitives.mdx
@@ -16,16 +16,16 @@ The steps in this topic describe how to run primitives workloads with REST API, 
 
 ### 1. Initialize the account
 
-Because Qiskit Runtime `Estimator` is a managed service, you first need to initialize your account. You can then select the simulator or real system you want to use to calculate the expectation value. You can then select the IBM Quantum Compute resource of your choice to run your calculations on. 
+Because Qiskit Runtime `Estimator` is a managed service, you first need to initialize your account. You can then select the device you want to use to calculate the expectation value. You can then select the IBM Quantum Compute resource of your choice to run your calculations on. 
 
-Details on how to initialize your account, view available backends and invalidate tokens can be found in this [topic](/start/setup-channel#access-ibm-quantum-systems-using-rest-api).
+Details on how to initialize your account, view available backends and invalidate tokens can be found in this [topic](/start/setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api).
 
 ### 2. Create a QASM circuit
 
 You need at least one circuit as the input to the `Estimator` primitive.
 
 
-* Define a QASM quantum circuit e.g. 
+Define a QASM quantum circuit e.g. 
 
 ```python
 qasm_string='''
@@ -46,7 +46,7 @@ The code snippets given below assume that the `qasm_string` has been transpiled 
 
 
 <Admonition type="note">
-    The jobs below use [Qiskit Runtime V2 primitives](https://docs.quantum.ibm.com/api/migration-guides/v2-primitives). Both SamplerV2 and EstimatorV2 take one or more primitive unified blocs (PUBs) as the input. Each PUB is a tuple that contains one circuit and the data broadcasted to that circuit, which can be multiple observables and parameters. Each PUB returns a result.
+    The jobs below use [Qiskit Runtime V2 primitives](https://docs.quantum.ibm.com/api/migration-guides/v2-primitives). Both `SamplerV2` and `EstimatorV2` take one or more primitive unified blocs (PUBs) as the input. Each PUB is a tuple that contains one circuit and the data broadcasted to that circuit, which can be multiple observables and parameters. Each PUB returns a result.
 </Admonition>
 
 
@@ -279,9 +279,9 @@ else:
 
 ### 1. Initialize the account
 
-Because Qiskit Runtime `Sampler` is a managed service, you first need to initialize your account. You can then select the simulator or real system you want to use to calculate the expectation value. You can then select the IBM Quantum Compute resource of your choice to run your calculations on. 
+Because Qiskit Runtime `Sampler` is a managed service, you first need to initialize your account. You can then select the device you want to use to calculate the expectation value. You can then select the IBM Quantum Compute resource of your choice to run your calculations on. 
 
-Details on how to initialize your account, view available backends and invalidate tokens can be found in this [topic](/start/setup-channel#access-ibm-quantum-systems-using-rest-api).
+Details on how to initialize your account, view available backends and invalidate tokens can be found in this [topic](/start/setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api).
 
 
 ### 2. Create a QASM circuit
@@ -289,7 +289,7 @@ Details on how to initialize your account, view available backends and invalidat
 You need at least one circuit as the input to the `Sampler` primitive.
 
 
-* Define a QASM quantum circuit e.g. 
+Define a QASM quantum circuit e.g. 
 
 ```python
 qasm_string='''
@@ -312,7 +312,7 @@ The code snippets given below assume that the `qasm_string` has been transpiled 
 
 
 <Admonition type="note">
-    The jobs below use [Qiskit Runtime V2 primitives](https://docs.quantum.ibm.com/api/migration-guides/v2-primitives). Both SamplerV2 and EstimatorV2 take one or more primitive unified blocs (PUBs) as the input. Each PUB is a tuple that contains one circuit and the data broadcasted to that circuit, which can be multiple observables and parameters. Each PUB returns a result.
+    The jobs below use [Qiskit Runtime V2 primitives](https://docs.quantum.ibm.com/api/migration-guides/v2-primitives). Both `SamplerV2` and `EstimatorV2` take one or more primitive unified blocs (PUBs) as the input. Each PUB is a tuple that contains one circuit and the data broadcasted to that circuit, which can be multiple observables and parameters. Each PUB returns a result.
 </Admonition>
 
 
@@ -482,7 +482,7 @@ else:
 
 <Admonition type="tip" title="Recommendations">
     - There are several ways to run workloads, depending on your needs: job mode, session mode and batch mode. Learn how to work with session mode and batch mode by following this [topic](rest-api-execution-modes).
-    - Learn how to [initialize your account](/start/setup-channel#access-ibm-quantum-systems-using-rest-api) with REST API.
+    - Learn how to [initialize your account](/start/setup-channel#set-up-to-use-ibm-quantum-platform-with-rest-api) with REST API.
     - Learn how to [transpile circuits using REST API](/transpile/rest-api-transpilation).
     - Read [Migrate to V2 primitives](/api/migration-guides/v2-primitives).
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
