--- a/docs/transpile/rest-api-transpilation.mdx
+++ b/docs/transpile/rest-api-transpilation.mdx
@@ -55,7 +55,7 @@ resp = requests.post(
         ```
     </TabItem>
 
-    <TabItem value="Qiskit Transpiler Service with AI" label="Qiskit Transpiler Service with AI">
+    <TabItem value="Qiskit Transpiler Service with AI" label="Qiskit Transpiler Service with AI enhanced passes">
         ```python
 backend='ibm_brisbane' #choose your IBM Backend
 
