Update redirected links

--- a/docs/run/processor-types.mdx
+++ b/docs/run/processor-types.mdx
@@ -39,7 +39,7 @@ Quantum volume: 128
 
 At 127 qubits, the Eagle processor family incorporates more scalable packaging technologies than previous generations. In particular, signals pass through multiple chip layers so as to allow for high-density I/O without sacrificing performance.
 
-See [this blog post](https://research.ibm.com/blog/127-qubit-quantum-processor-eagle) for more about the Eagle processor family.
+See [IBM Quantum breaks the 100‑qubit processor barrier](https://www.ibm.com/quantum/blog/127-qubit-quantum-processor-eagle) for more about the Eagle processor family.
 
 *   [View available Eagle systems](https://quantum.ibm.com/services/resources?tab=systems&type=Eagle)
 
@@ -80,7 +80,7 @@ Egret brings the innovations of tunable couplers onto a 33-qubit platform, resul
 *   [View available Egret systems](https://quantum.ibm.com/services/resources?tab=systems&type=Egret)
 
 <Admonition type="info" title="Revisions">
-  `r1` (December 2022) The first realization of the Egret processor has demonstrated the highest Quantum Volume among IBM Quantum&trade; systems and a substantial improvement in two-qubit gate error rates ([https://research.ibm.com/blog/quantum-volume-256](https://research.ibm.com/blog/quantum-volume-256)). This new quantum processor boasts a substantial speedup and fidelity improvement (many gates approaching 99.9%) in two-qubit gates while reducing spectator errors.
+  `r1` (December 2022) The first realization of the Egret processor has demonstrated the highest Quantum Volume among IBM Quantum&trade; systems and a substantial improvement in two-qubit gate error rates (see [Pushing quantum performance forward with our highest Quantum Volume yet](https://www.ibm.com/quantum/blog/quantum-volume-256)). This new quantum processor boasts a substantial speedup and fidelity improvement (many gates approaching 99.9%) in two-qubit gates while reducing spectator errors.
 </Admonition>
 
 ## Falcon
