--- a/docs/start/latest-updates.mdx
+++ b/docs/start/latest-updates.mdx
@@ -5,6 +5,9 @@ description: The latest updates from Qiskit and IBM Quantum, including the lates
 
 # Latest updates
 
+*Last updated June 2024*
+{/* remember to update the date in the previous line each time this page is updated!!! */}
+
 Keep up with the latest and greatest from Qiskit and IBM Quantum! Gathered here are the the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
 
 ## Latest release summaries
@@ -85,7 +88,7 @@ Probabilistic error amplification (PEA) error mitigation method is now available
 
 ### 18 June 2024
 
-The `optimization_level` option is deprecated for Estimator V2 and will be removed no sooner than three months from now.
+The `optimization_level` option is deprecated for Estimator V2 and will be removed no sooner than 30 September 2024.
 
 
 ## Qiskit blog: How execution modes enable efficient, utility-scale workloads 
