--- a/docs/run/runtime-options-overview.mdx
+++ b/docs/run/runtime-options-overview.mdx
@@ -6,7 +6,7 @@ description: Specify options when building with Qiskit Runtime primitives
 
 # Advanced Qiskit Runtime options
 
- You can pass options to primitives to customize them to meet your needs. This section focuses on Qiskit Runtime primitive options. While most of the `primitives` interface is common across implementations, most options are not. Consult the corresponding API references for information about the `qiskit.primitives` and `qiskit_aer.primitives` options.
+ You can pass options to primitives to customize them to meet your needs. This section focuses on Qiskit Runtime primitive options. While the interface of the primitives' `run()`  method is common across all implementations, their options are not. Consult the corresponding API references for information about the `qiskit.primitives` and `qiskit_aer.primitives` options.
 
 
 <Admonition type="caution" title="Important">
